--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~38.0.8",
     "expo-facebook": "^8.2.1",
     "expo-image-picker": "^8.4.0",
+    "expo-location": "^8.3.0",
     "expo-permissions": "^9.1.0",
     "expo-status-bar": "^1.0.2",
     "firebase": "^7.18.0",
@@ -26,6 +27,7 @@
     "react-native-elements": "^2.2.1",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.2",
+    "react-native-maps": "^0.27.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "^2.9.0",
