--- a/app.json
+++ b/app.json
@@ -19,6 +19,16 @@
     "ios": {
       "supportsTablet": true
     },
+    "android": {
+      "permissions":[
+        "CAMERA_ROLL",
+        "READ_EXTERNAL_STORAGE", 
+        "WRITE_EXTERNAL_STORAGE",
+        "LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION" 
+      ]
+    },
     "web": {
       "favicon": "./assets/favicon.png"
     },
